# mkdocstrings-matlab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  debug.py  latest  mkdocs.yml  pydantic_core-2.35.0-cp314-cp314-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  pyproject.toml  renovate.json  versions.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  renovate.json5
.github/workflows/: docs.yaml  qualify.yaml  release.yaml  update-templates.yaml
.github/workflwos/: release.yaml
__test__/: 404.html
__test__/changelog/: index.html
__test__/search/: search_index.json
docs/: api.md  credits.md  debug.py  index.md  license-page.md
docs/snippets/: myClass.m  myfunction.m  typedFunction.m
docs/stylesheets/: extra.css
docs/usage/: global.md  index.md
latest/: 404.html  index.html  sitemap.xml
latest/api/: index.html
latest/assets/: _mkdocstrings.css
latest/changelog/: index.html
latest/credits/: index.html
latest/license/: index.html
latest/search/: search_index.json
latest/usage/: index.html
pr-devel/: 404.html  index.html  sitemap.xml
pr-devel/api/: index.html
pr-devel/changelog/: index.html
pr-devel/credits/: index.html
pr-devel/license/: index.html
pr-devel/search/: search_index.json
pr-devel/snippets/: do_something.m
pr-devel/usage/: index.html
pr-development/: 404.html  index.html  sitemap.xml
pr-development/api/: index.html
pr-development/assets/: _mkdocstrings.css
pr-development/changelog/: index.html
pr-development/credits/: index.html
pr-development/license/: index.html
pr-development/search/: search_index.json
pr-development/usage/: index.html
pr-fix/: 404.html  index.html  sitemap.xml
pr-fix-config-path/: 404.html  index.html  sitemap.xml
pr-fix-config-path/api/: index.html
pr-fix-config-path/changelog/: index.html
pr-fix-config-path/credits/: index.html
pr-fix-config-path/license/: index.html
pr-fix-config-path/search/: search_index.json
pr-fix-config-path/usage/: index.html
pr-fix-docs-subdir/: 404.html  index.html  sitemap.xml
pr-fix-docs-subdir/api/: index.html
pr-fix-docs-subdir/changelog/: index.html
pr-fix-docs-subdir/credits/: index.html
pr-fix-docs-subdir/license/: index.html
pr-fix-docs-subdir/search/: search_index.json
pr-fix-docs-subdir/snippets/: OtherClass.m  do_varargin.m
pr-fix-docs-subdir/usage/: index.html
pr-fix-function-header-line-continuation/: 404.html  index.html  sitemap.xml
pr-fix-function-header-line-continuation/api/: index.html
pr-fix-function-header-line-continuation/changelog/: index.html
pr-fix-function-header-line-continuation/credits/: index.html
pr-fix-function-header-line-continuation/license/: index.html
pr-fix-function-header-line-continuation/search/: search_index.json
pr-fix-function-header-line-continuation/snippets/: myClass.m
pr-fix-function-header-line-continuation/usage/: index.html
pr-fix/api/: index.html
pr-fix/changelog/: index.html
pr-fix/credits/: index.html
pr-fix/license/: index.html
pr-fix/search/: search_index.json
pr-fix/usage/: index.html
pr-logo/: 404.html  index.html  sitemap.xml
pr-logo/api/: index.html
pr-logo/changelog/: index.html
pr-logo/credits/: index.html
pr-logo/license/: index.html
pr-logo/search/: search_index.json
pr-logo/usage/: index.html
pr-renovate-python-semantic-release-publish-action-9.x/: 404.html  index.html  sitemap.xml
pr-renovate-python-semantic-release-publish-action-9.x/api/: index.html
pr-renovate-python-semantic-release-publish-action-9.x/changelog/: index.html
pr-renovate-python-semantic-release-publish-action-9.x/credits/: index.html
pr-renovate-python-semantic-release-publish-action-9.x/license/: index.html
pr-renovate-python-semantic-release-publish-action-9.x/search/: search_index.json
pr-renovate-python-semantic-release-publish-action-9.x/usage/: index.html
pr-renovate-python-semantic-release-python-semantic-release-9.x/: 404.html  index.html  sitemap.xml
pr-renovate-python-semantic-release-python-semantic-release-9.x/api/: index.html
pr-watermarkhu-patch-1/: 404.html  index.html  objects.inv  sitemap.xml
scripts/: copy_and_update_python_templates.py  matlab_builtins.py
submodules/mkdocstrings-matlab-r2023a/: README.md  pyproject.toml
submodules/mkdocstrings-matlab-r2023b/: README.md  pyproject.toml
submodules/mkdocstrings-matlab-r2024b/: README.md  pyproject.toml
test/: __init__.py  conftest.py  debug.py  helpers.py  mkdocs.yml  playground.py  test.py  test_config.py  test_end_to_end.py  test_handler.py  test_handler_additional.py  test_init.py  test_livescript.py  test_rendering.py  test_rendering_additional.py  test_rendering_advanced.py
tests/: conftest.py  helpers.py  test_end_to_end.py  test_handler.py  test_rendering.py
v0.4.0/: 404.html  index.html  objects.inv
v0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.8.0/: 404.html  index.html  sitemap.xml
v0.8.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.8.2/: 404.html  index.html  sitemap.xml
v0.9.0/: 404.html  index.html  sitemap.xml
v0.9.1/: 404.html  index.html  sitemap.xml
v0.9.2/: 404.html  index.html  sitemap.xml
v0.9.3/: 404.html  index.html  sitemap.xml
v0.9.4/: 404.html  index.html  sitemap.xml
v0.9.5/: 404.html  index.html  sitemap.xml
v0.9.7/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.*/: 404.html  debug.py  index.html  sitemap.xml
v1.0.0/: 404.html  index.html  sitemap.xml
v1.0.1/: 404.html  index.html  sitemap.xml
v1.0.2/: 404.html  index.html  sitemap.xml
v1.0.3/: 404.html  index.html  sitemap.xml
v1.0.4/: 404.html  index.html  sitemap.xml
v1.0.5/: 404.html  index.html  sitemap.xml
v1.0.6/: 404.html  index.html  sitemap.xml
v1.0.7/: 404.html  index.html  sitemap.xml
v1.0.8/: 404.html  index.html  objects.inv  sitemap.xml
v1.1.*/: 404.html  index.html  objects.inv  sitemap.xml
v2.0.*/: 404.html  index.html  objects.inv  sitemap.xml
(+843 files in other folders)
