[project]
name = "mkdocstrings-matlab"
version = "0.0.0"
description = "A MATLAB handler for mkdocstrings"
authors = [
    { name = "Mark Hu", email = "watermarkhu@gmail.com" }
]
license =  { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10, <3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "griffe>=2.0.0,<3",
    "maxx>=0.8.0,<1",
    "mkdocstrings>=1.0,<2",
    "mkdocs-autorefs>=1.4,<2",
    "charset-normalizer>=3.4,<4",
    "typing-extensions>=4.0; python_version < '3.11'",
]

[tool.uv.sources]
pygments = { git = "https://github.com/watermarkhu/pygments", branch = "matlab" }
[dependency-groups]
dev = [
    "ty>=0.0.25,<1",
    "prek>=0.2.19,<1",
    "ruff>=0.15.0,<1",
    "pydantic>=2.10,<2.12.4",
    "pydantic-core>=2.35.0,<3",
    "pytest>=9.0.0,<10",
    "pytest-cov>=7.1.0,<8",
    "beautifulsoup4>=4.13.3,<5",
    "inline-snapshot>=0.32.0,<1",
    "mkdocs-material>=9.5,<10",
]
docs = [
    "pygments",
    "mkdocstrings-python>=2.0",
    "zensical>=0.0.29",
]
mkdocs = [
    "pygments",
    "mkdocs<2",
    "mkdocs-material>=9.5",
    "mkdocstrings-python>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "docs"]
managed = true

[tool.pytest]
minversion = "9.0"
addopts = ["-v", "--tb=short", "--color=yes"]
pythonpath = [
    "test"
]
markers = [
    "without_handler"
]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # Python specific errors
    "W",  # Warnings
    "F",  # Pyflakes (code complexity)
    "I",  # isort
]
ignore = [
    "E501",  # Line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.inline-snapshot]
test-dir = "test"
storage-dir = "test/snapshots"
format-command = "ruff format --config pyproject.toml --stdin-filename {filename}"
default-flags=["create", "trim"]

[tool.ty.src]
include = ["src"]
exclude = ["test"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocstrings_handlers"]
