[project]
name = "mkdocstrings-matlab-r2023a"
version = "0.1.2"
description = "Add your description here"
authors = [
    { name = "Mark Shui Hu", email = "watermarkhu@gmail.com" }
]
dependencies = [
    "matlabengine==9.14.7",
]
readme = "README.md"
requires-python = ">=3.8,<3.11"
keywords = ["mkdocs", "mkdocstrings", "documentation", "docstring", "matlab"]
license = {file = "LICENSE"}
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Documentation",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
Documentation = "http://watermarkhu.nl/mkdocstrings-matlab/"
Repository = "https://github.com/watermarkhu/mkdocstrings-matlab-r2023a"
Issues = "https://github.com/watermarkhu/mkdocstrings-matla-r2023a/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocstrings_handlers"]

